# rust-gmail

./: Cargo.toml
src/: lib.rs  service_account.rs
src/async_impl/: send_email.rs
src/common/: send_email.rs
